Added Location Compare, updated basic auth
Added location comparison against user accepted locations which are
stored in the BaaS
Added url to test location comparison
Updated basic auth to compare credentials against users in the BaaS
